# limousine

./: .gitignore  LICENSE  README.md  implementation-plan.md  limousine.proj  plan-introspection.md  prompt-history.md  pubspec.yaml  pyproject.toml  requirements.txt  sample-app.wksp  spec.md  spec2-structure-change.md
lib/: app.dart  main.dart
lib/models/: module.dart  service_state.dart  workspace.dart
lib/providers/: global_config_provider.dart  services_provider.dart  workspace_provider.dart
lib/services/: env_service.dart  logging_service.dart  process_service.dart  storage_service.dart
lib/ui/screens/: main_screen.dart  startup_screen.dart
limousine/: main.py  state_manager.py
limousine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
limousine/actions/: module_actions.py  project_actions.py  service_actions.py
limousine/async_ops/: task_runner.py
limousine/env/: env_updater.py
limousine/models/: config.py  state.py
limousine/process/: environment.py  manager.py  pidfile.py  recovery.py
limousine/storage/: global_config.py  project_config.py  workspace_config.py
limousine/ui/: app.py  loading_screen.py  main_window.py  startup.py  tab_manager.py  welcome_screen.py
limousine/ui/dashboard/: dashboard.py  module_widget.py  project_widget.py  service_row.py
limousine/ui/dialogs/: about_dialog.py  command_dialog.py  env_compare_dialog.py  env_dialog.py  error_dialog.py  (+3 more)
limousine/utils/: logging_config.py  path_utils.py
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
(+14 files in other folders)
