[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limousine"
version = "0.1.0"
description = "microservice dev environment manager"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
]

[project.scripts]
limousine = "limousine.main:main"
